--- a/scss/layout/main.scss
+++ b/scss/layout/main.scss
@@ -6,10 +6,7 @@
 .parent {
   display: flex;
   width: 100%;
-  // flex-direction: column;
   flex-wrap: wrap;
-  // justify-content: center;
-  // align-items: center;
   margin-top: 45px;
   margin-left: 100px;;
   margin-right: auto;
@@ -30,16 +27,29 @@
       display: flex;
       width: 45%;
       flex-wrap: wrap;
-      justify-content: center;
-      margin-bottom: 950px;
 
+      margin-bottom: 950px;
+        h2{
+          margin-left: 100px;
+          display: flex;
+          justify-content: space-between;
+        }
+        h1{
+          margin-left: 100px;
+          display: flex;
+          justify-content: space-between;
+        }
+        .colorWay{
+          height: 1000px;
+          width: 100%;
+          margin-left: 100px;
+        }
+      }
   }
-}
 
   .bottomParent {
     display: flex;
     width:93vw;
-    // flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 60px;
@@ -49,7 +59,6 @@
   }
 
   .footer {
-  // position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
